# cubic

./: Cargo.toml  config.toml
src/: app.rs  main.rs
src/app/: config.rs  context.rs  mod.rs  state.rs
src/render/: chain.rs  context.rs  mod.rs  stage.rs  state.rs
src/render/stage/: clear.rs
src/ui/: mod.rs  state.rs
src/utils/: clock.rs  mod.rs  ui.rs
